src/test/deca/context/valid/sansObjet/cast_bool_1.deca
// Description :
//    Cast de boolean vers boolean impossible
//
// Resultats :
//    Ok

{
    boolean b;
    b = (boolean)(1 > 0);
}
