src/test/deca/context/invalid/cast_bool_2.deca
// Description :
//    Cast de boolean vers int impossible
//
// Resultats :
//    Erreur contextuelle
//    Ligne 10 : Cast invalide de boolean vers int

{
    int a;
    a = (int)(true);
}
